fix(be): adding bfs for category retrive from maincategory id
