# be/core/api/category/category.routes.ts
@@ -2,7 +2,7 @@ import type { z } from "zod";
 
 import express from "express";
 
-import type { CategoryResponse, CreateCategoryResponse, GetCategoryOverviewResponse, RemoveCategoryResponse, UpdateCategoryResponse } from "@Ciri/types/category";
+import type { CategoryResponse, CreateCategoryResponse, GetCategoryOverviewResponse, GetCategoryTreeResponse, RemoveCategoryResponse, UpdateCategoryResponse } from "@Ciri/types/category";
 
 import { createCategorySchema } from "@Ciri/core/dto/category/create-category.dto";
 
@@ -13,6 +13,8 @@ import { removeCategorySchema } from "@Ciri/core/dto/category/remove-category.dt
 import { updateCategorySchema } from "@Ciri/core/dto/category/update-category.dto";
 
 import { getCategoryOverviewWithDepthSchema } from "@Ciri/core/dto/category/get-category-overview-with-depth.dto";
+
+import { getCategoryTreeSchema } from "@Ciri/core/dto/category/get-category-tree.dto";
 import { getContext } from "@Ciri/core/middlewares";
 import { CategoryService } from "@Ciri/core/services/category.service";
 import { ErrorResponses, sendSuccessResponse } from "@Ciri/core/utils/error-response";
@@ -49,6 +51,11 @@ export type GetCategoryOverviewResponseServices = {
 export type GetCategoryOverviewWithDepthRequestBody = z.infer<typeof getCategoryOverviewWithDepthSchema>;
 export type GetCategoryOverviewWithDepthResponseServices = {
       resData: GetCategoryOverviewResponse | null;
+      error: string | null;
+    };
+export type GetCategoryTreeRequestBody = z.infer<typeof getCategoryTreeSchema>;
+export type GetCategoryTreeResponseServices = {
+      resData: GetCategoryTreeResponse | null;
       error: string | null;
     };
 
@@ -222,6 +229,36 @@ router.post(
       UnitLogger(
         LogType.ROUTER,
         "Category GetCategoryOverviewWithDepth:",
+        LogLevel.ERROR,
+        (error as Error).message,
+      );
+      next(error);
+    }
+  },
+);
+
+router.post(
+  "/GetCategoryTree",
+  validateBody<GetCategoryTreeRequestBody>(getCategoryTreeSchema),
+  async (req, res, next): Promise<void> => {
+    try {
+      const ctx = getContext(req);
+      const validatedBody = getValidatedBody<GetCategoryTreeRequestBody>(req);
+      const response = await categoryService.GetCategoryTree(ctx, validatedBody);
+      if (response.error) {
+        ErrorResponses.badRequest(res, response.error);
+        return;
+      }
+      if (!response.resData) {
+        ErrorResponses.badRequest(res, "No response data");
+        return;
+      }
+      sendSuccessResponse<GetCategoryTreeResponse>(res, 201, response.resData);
+    }
+    catch (error) {
+      UnitLogger(
+        LogType.ROUTER,
+        "Category GetCategoryTree:",
         LogLevel.ERROR,
         (error as Error).message,
       );
